[metadata]
name = tar_binary_restarts
description = Tar binary restart files as backup for Fesom2
description-file = README.rst
author = Nadine Wieters
author-email = nadine.wieters@awi.de
#license = GPLv3

[entry_points]
esm_tools.plugins =
    tar_binary_restarts = tar_binary_restarts.tar_binary_restarts:tar_binary_restarts
